Reduce differences